--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "petstore",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.9.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
